<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.deepcam.access.RegisterActivity">


    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:minHeight="?attr/actionBarSize"
            app:popupTheme="@style/ThemeToolbar"
            app:theme="@style/ThemeToolbar" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/toolbar"
            android:orientation="horizontal">

            <android.support.v7.widget.CardView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/margin_size"
                android:layout_weight="1"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="16dp"
                app:cardElevation="16dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvSingleTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin_size"
                        android:text="@string/single_register_title"
                        android:textSize="@dimen/title_size"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:id="@+id/linear_info"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tvSingleTitle"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="400dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/margin_size">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:background="@drawable/text_left_background"
                                android:padding="10dp"
                                android:text="@string/name_title"
                                android:textSize="@dimen/text_size" />

                            <EditText
                                android:id="@+id/edtName"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@drawable/edit_right_background"
                                android:padding="10dp"
                                android:singleLine="true"
                                android:textSize="@dimen/text_size" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="400dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/margin_size">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:background="@drawable/text_left_background"
                                android:padding="10dp"
                                android:text="@string/gender_title"
                                android:textSize="@dimen/text_size" />

                            <EditText
                                android:id="@+id/edtGender"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@drawable/edit_right_background"
                                android:padding="10dp"
                                android:singleLine="true"
                                android:textSize="@dimen/text_size" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="400dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/margin_size">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:background="@drawable/text_left_background"
                                android:padding="10dp"
                                android:text="@string/sector_title"
                                android:textSize="@dimen/text_size" />

                            <EditText
                                android:id="@+id/edtSector"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@drawable/edit_right_background"
                                android:padding="10dp"
                                android:singleLine="true"
                                android:textSize="@dimen/text_size" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="400dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/margin_size">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:background="@drawable/text_left_background"
                                android:padding="10dp"
                                android:text="@string/employee_number_title"
                                android:textSize="@dimen/text_size" />

                            <EditText
                                android:id="@+id/edtNumber"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@drawable/edit_right_background"
                                android:padding="10dp"
                                android:singleLine="true"
                                android:textSize="@dimen/text_size" />
                        </LinearLayout>

                    </LinearLayout>

                    <ImageView
                        android:id="@+id/imgFace"
                        android:layout_width="200dp"
                        android:layout_height="200dp"
                        android:layout_alignTop="@+id/linear_info"
                        android:layout_toRightOf="@+id/linear_info"
                        android:clickable="true"
                        android:src="@drawable/face" />

                    <com.unstoppable.submitbuttonview.SubmitButton
                        android:id="@+id/submitbutton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_centerHorizontal="true"
                        android:layout_margin="10dp"
                        app:buttonText="@string/single_register_title"
                        app:buttonTextSize="@dimen/text_size"
                        app:progressStyle="loading"
                        app:succeedColor="@color/green" />


                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="16dp"
                app:cardElevation="16dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/tvBulkTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin_size"
                        android:text="@string/bulk_registration"
                        android:textSize="@dimen/title_size"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tvBulkTitle"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/margin_size">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:background="@drawable/text_left_background"
                                android:padding="10dp"
                                android:text="@string/data_path_title"
                                android:textSize="@dimen/text_size" />

                            <TextView
                                android:id="@+id/tvDataPath"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="10"
                                android:background="@drawable/text_right_background"
                                android:maxLines="1"
                                android:padding="10dp"
                                android:singleLine="true"
                                android:textSize="@dimen/text_size" />

                            <TextView
                                android:id="@+id/tvBtnDataPath"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:background="@drawable/text_button_background"
                                android:padding="@dimen/margin_size"
                                android:text="@string/select"
                                android:textSize="@dimen/text_size" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/margin_size">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:background="@drawable/text_left_background"
                                android:padding="10dp"
                                android:text="@string/pic_path_title"
                                android:textSize="@dimen/text_size" />

                            <TextView
                                android:id="@+id/tvPicPath"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="10"
                                android:background="@drawable/text_right_background"
                                android:maxLines="1"
                                android:padding="10dp"
                                android:singleLine="true"
                                android:textSize="@dimen/text_size" />

                            <TextView
                                android:id="@+id/tvBtnPicPath"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:background="@drawable/text_button_background"
                                android:padding="@dimen/margin_size"
                                android:text="@string/select"
                                android:textSize="@dimen/text_size" />
                        </LinearLayout>

                    </LinearLayout>

                    <com.unstoppable.submitbuttonview.SubmitButton
                        android:id="@+id/submitBulkbutton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_centerHorizontal="true"
                        android:layout_margin="10dp"
                        app:buttonText="@string/bulk_registration"
                        app:buttonTextSize="@dimen/text_size"
                        app:progressStyle="loading"
                        app:succeedColor="@color/green" />
                </RelativeLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>


    </RelativeLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/drawer_color"
        app:headerLayout="@layout/drawer_header"
        app:itemIconTint="@color/drawer_item_Icon_tint"
        app:itemTextColor="@color/drawer_item_text_color"
        app:menu="@menu/drawer" />

</android.support.v4.widget.DrawerLayout>
